--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,27 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#yellow-bar {
+    background-color: #ff0;
+    color: #000;
+    left: 0;
+    padding: 3px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.yellow-bg {
+    background-color: #ff0;
+    color: #000;
+    width: fit-content;
+}
+
+.black-bg {
+    background-color: #000;
+    color: white;
+    width: fit-content;
+    padding: 0 6px !important;
+    font-weight: bold;
+}
